# MyOs

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  build.sh  gdbinit
arch/: Kconfig
cmake/: compile_options.cmake  gen_linker_script.cmake  kconfig.cmake  module.cmake
cmake/board/: cfg.cmake
cmake/toolschain/: d1_gcc.cmake  raspi4b_gcc.cmake
configs/: d1_defconfig  raspi4b_defconfig
drivers/: CMakeLists.txt  fpioa.c
include/: encoding.h  mmu.h  sections.h
init/: CMakeLists.txt  Kconfig  arm64_main.c  arm64_start.S  riscv_main.c  riscv_start.S
linker_scripts/: d1_link.lds  raspi4b_link.lds
